--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -79,3 +79,142 @@ body {
   border: 1px solid #EBEBEB;
   border-bottom: 0;
 }
+
+/* Folder Modal */
+
+#myBtn {
+    cursor: pointer;
+    outline: none;
+    border: none;
+    background: none;
+    font-family: monospace;
+    color: aliceblue;
+    text-shadow: 4px 4px 8px black;
+    font-size: 13px;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 2; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.7); 
+  -webkit-animation-name: fadeIn; /* Fade in the background */
+  -webkit-animation-duration: 0.4s;
+  animation-name: fadeIn;
+  animation-duration: 0.4s;
+  /* -webkit-text-stroke: 1px black; */
+  font-weight: bold;
+}
+
+.modal::after {
+  content: "";
+  /* background-image: url("https://cdn2.watson.ch/imgdb/1980/Qx,E,0,0,3092,2061,1288,858,515,343/1233341493958781"); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.27;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+}
+
+/* Modal Content */
+.modal-content {
+  opacity: .7;
+  position: fixed;
+  left: 14.5%;
+  bottom: 22.7%;
+  width: 70%;
+  height: 60%;
+  /* text-align: center; */
+  background-color: black;
+  /* background-image: url("https://cdn2.watson.ch/imgdb/1980/Qx,E,0,0,3092,2061,1288,858,515,343/1233341493958781"); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-animation-name: slideIn;
+  -webkit-animation-duration: 0.4s;
+  animation-name: slideIn;
+  animation-duration: 0.4s;
+  color: floralwhite;
+  font-size: 2.5vh;
+  /* text-shadow: 1px 1px 3px black; */
+  /* -webkit-text-stroke: 1px black; */
+  font-weight: bold;
+  z-index: 3;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    /* background-color: red; */
+    color: floralwhite;
+    text-shadow: 1px 1px 8px black;
+        text-align: center;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+    padding: 2px 16px;
+    /* background-color: blue; */
+    color: floralwhite;
+    text-shadow: 1px 1px 8px black;
+    font-weight: 100;
+        text-align: center;
+}
+
+.fa-angellist:before {
+  color: floralwhite;
+}
+
+.fa-github:before {
+  color: floralwhite;
+}
+
+.fa-linkedin-in:before {
+  color: floralwhite;
+}
+
+/* Add Animation */
+@-webkit-keyframes slideIn {
+    from {bottom: -300px; opacity: 0} 
+    to {bottom: 22.7%; opacity: 1}
+}
+
+@keyframes slideIn {
+    from {bottom: -300px; opacity: 0}
+    to {bottom: 22.7%; opacity: 1}
+}
+
+@-webkit-keyframes fadeIn {
+    from {opacity: 0} 
+    to {opacity: 1}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0} 
+    to {opacity: 1}
+}
