--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -102,8 +102,6 @@ body {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.7); 
   -webkit-animation-name: fadeIn; /* Fade in the background */
   -webkit-animation-duration: 0.4s;
   animation-name: fadeIn;
@@ -199,7 +197,7 @@ body {
 }
 
 /* Add Animation */
-@-webkit-keyframes slideIn {
+/* @-webkit-keyframes slideIn {
     from {bottom: -300px; opacity: 0} 
     to {bottom: 22.7%; opacity: 1}
 }
@@ -207,7 +205,7 @@ body {
 @keyframes slideIn {
     from {bottom: -300px; opacity: 0}
     to {bottom: 22.7%; opacity: 1}
-}
+} */
 
 @-webkit-keyframes fadeIn {
     from {opacity: 0} 
