--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,8 +8,8 @@ body {
   display: flex;
   flex-direction: column;
   position: absolute;
-  left: 10%;
-  top: 200px;
+  left: 45%;
+  top: 45%;
   text-align: center;
 }
 
