--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -117,6 +117,18 @@ body {
   font-weight: bold;
 }
 
+.newNestedFolderBtn {
+  padding: 2px 16px;
+  /* color: floralwhite; */
+  text-shadow: 1px 1px 8px black;
+  font-weight: 100;
+  text-align: center;
+  position: fixed;
+  left: 17.5%;
+  top: 21.8%;
+  z-index: 3;
+}
+
 /* Modal Content */
 .modal-content {
   overflow-y: scroll;
