--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -125,7 +125,7 @@ body {
   text-align: center;
   position: fixed;
   left: 17.5%;
-  top: 21.8%;
+  top: 18.4%;
   z-index: 3;
 }
 
@@ -159,44 +159,60 @@ body {
 
 /* The Close Button */
 .close {
-  color: white;
   float: right;
-  font-size: 28px;
-  font-weight: bold;
+  font-size: 20px;
 }
 
 .close:hover,
 .close:focus {
-  color: #000;
   text-decoration: none;
   cursor: pointer;
 }
 
 .modal-header {
   padding: 2px 16px;
-  /* background-color: red; */
   color: floralwhite;
   text-shadow: 1px 1px 8px black;
   text-align: center;
+  background-color: black;
+  position: fixed;
+  width: 66%;
+  border-radius: 15px;
+  height: 28px;
+}
+
+.modal-header h2 {
+  margin-top: 5px;
+  font-size: 16px;
 }
 
 .modal-body {
   display: flex;
   flex-wrap: wrap;
   padding: 2px 16px;
+  position: fixed;
+  width: 66%;
+  top: 22%;
+  overflow: hidden;
+  overflow-y: scroll;
+  max-height: 50.7%;
 }
 
 .modal-footer {
   padding: 2px 16px;
   /* background-color: blue; */
   color: floralwhite;
-  text-shadow: 1px 1px 8px black;
+  text-shadow: 1px 1px 5px black;
   font-weight: 100;
   text-align: center;
   position: fixed;
   left: 14.5%;
   bottom: 22.7%;
   z-index: 3;
+}
+
+.modal-footer h3 {
+  margin: 0;
 }
 
 .fa-angellist:before {
