--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -139,7 +139,7 @@ body {
   width: 70%;
   height: 60%;
   border-radius: 15px;
-  /* text-align: center; */
+  text-align: center;
   background-color: black;
   /* background-image: url("https://cdn2.watson.ch/imgdb/1980/Qx,E,0,0,3092,2061,1288,858,515,343/1233341493958781"); */
   background-position: center;
@@ -195,7 +195,7 @@ body {
   top: 22%;
   overflow: hidden;
   overflow-y: scroll;
-  max-height: 50.7%;
+  height: 50.7%;
 }
 
 .modal-footer {
