--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -32,6 +32,8 @@ body {
   border: none;
 }
 
+/* right-click dropdown */
+
 #menu {
   visibility: hidden;
   opacity: 0;
@@ -83,6 +85,64 @@ body {
 }
 
 #menu hr {
+  border: 1px solid #EBEBEB;
+  border-bottom: 0;
+}
+
+/* delete dropdown */
+
+#deleteDD {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  background: #fff;
+  color: #555;
+  font-family: sans-serif;
+  font-size: 11px;
+  -webkit-transition: opacity .2s ease-in-out;
+  -moz-transition: opacity .2s ease-in-out;
+  -ms-transition: opacity .2s ease-in-out;
+  -o-transition: opacity .2s ease-in-out;
+  transition: opacity .2s ease-in-out;
+  -webkit-box-shadow: 2px 2px 2px 0px rgba(143, 144, 145, 1);
+  -moz-box-shadow: 2px 2px 2px 0px rgba(143, 144, 145, 1);
+  box-shadow: 2px 2px 2px 0px rgba(143, 144, 145, 1);
+  padding: 0px;
+  border: 1px solid #C6C6C6;
+  z-index: 5;
+}
+
+#deleteDD a {
+  display: block;
+  color: #555;
+  text-decoration: none;
+  padding: 6px 8px 6px 30px;
+  width: 250px;
+  position: relative;
+}
+
+#deleteDD a img,
+#deleteDD a i.fa {
+  height: 20px;
+  font-size: 17px;
+  width: 20px;
+  position: absolute;
+  left: 5px;
+  top: 2px;
+}
+
+#deleteDD a span {
+  color: #BCB1B3;
+  float: right;
+}
+
+#deleteDD a:hover {
+  cursor: pointer;
+  color: #fff;
+  background: #3879D9;
+}
+
+#deleteDD hr {
   border: 1px solid #EBEBEB;
   border-bottom: 0;
 }
