--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,7 +10,7 @@ body {
 #folder {
   width: 100px;
   height: 120px;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   position: absolute;
   left: 45%;
