--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,7 +9,7 @@ body {
 
 #folder {
   width: 100px;
-  height: 120px;
+  /* height: 120px; */
   /* display: flex; */
   flex-direction: column;
   position: absolute;
