--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -161,13 +161,16 @@ body {
 }
 
 .modal {
+  /* background: #3879D9; */
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 2; /* Sit on top */
   left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  /* width: 70%;
+  height: 60%; */
   overflow: auto; /* Enable scroll if needed */
   -webkit-animation-name: fadeIn; /* Fade in the background */
   -webkit-animation-duration: 0.4s;
@@ -191,7 +194,7 @@ body {
 
 /* Modal Content */
 .modal-content {
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   /* opacity: .7; */
   position: fixed;
   left: 14.5%;
