--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -250,6 +250,10 @@ body {
   /* background-color: darkturquoise */
 }
 
+.portal {
+  transform: translateY(4.6vh);
+}
+
 .modal-body {
   display: flex;
   flex-wrap: wrap;
