--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,6 +7,18 @@ body {
   background-size: cover;
 }
 
+#authorize_button {
+  float: right;
+}
+
+#signout_button {
+  float: right;
+}
+
+.auth_buttons {
+  float: right;
+}
+
 #folder {
   width: 100px;
   /* height: 120px; */
