--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -28,8 +28,25 @@ body {
   text-decoration: none;
   font-size: 15px;
   color: #818181;
-  display: block;
+  justify-content: space-between;
   transition: 0.3s;
+  display: flex;
+  /* width: fit-content; */
+}
+
+.sidenav button {
+  float: right;
+  background: none;
+  outline: none;
+  color: #818181;
+  border: none;
+  transition: 0.3s;
+  /* z-index: 2; */
+}
+
+.sidenav button:hover {
+  cursor: pointer;
+  color: #f1f1f1;
 }
 
 .sidenav a:hover {
