--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,6 +6,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   transition: margin-left .5s;
+  overflow: hidden;
 }
 
 /* sidenav */
