--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -87,8 +87,8 @@ body {
   /* display: flex; */
   flex-direction: column;
   position: absolute;
-  left: 45%;
-  top: 45%;
+  right: 2%;
+  top: 7%;
   text-align: center;
 }
 
