--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,6 +9,13 @@ body {
   overflow: hidden;
 }
 
+#wallpaper-parent {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 7px;
+}
+
 /* sidenav */
 
 .sidenav {
