Input field inclues multiple words

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,7 @@
 body {
   background-color: indigo;
-  background: url(http://hdgifs.com/wp-content/uploads/2017/04/pixel-nature.gif) no-repeat center center fixed; 
+  /* background: url(http://hdgifs.com/wp-content/uploads/2017/04/pixel-nature.gif) no-repeat center center fixed;  */
+  background: url(/assets/images/classic_windows.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
